--- a/documentation/modules/configuring/proc-listing-connector-offsets.adoc
+++ b/documentation/modules/configuring/proc-listing-connector-offsets.adoc
@@ -5,14 +5,16 @@
 // assembly-config.adoc
 
 [id='proc-listing-connector-offsets-{context}']
-= Listing connector offsets
+= Listing Kafka Connect connector offsets
 
 [role="_abstract"]
-To track connector offsets using `KafkaConnector` resources, add the `listOffsets` configuration. 
-The offsets, which keep track of the flow of data, are written to a config map specified in the configuration. 
-If the config map does not exist, Strimzi creates it. 
+[role="_abstract"]
+To list connector offsets using `KafkaConnector` resources, configure the connector to write offsets to a `ConfigMap`.
 
-After the configuration is in place, annotate the `KafkaConnector` resource to write the list to the config map.
+Offsets track the progress of data processing.
+If the referenced `ConfigMap` does not exist, Strimzi creates it.
+
+After the configuration is in place, annotate the `KafkaConnector` resource to write the offsets to the `ConfigMap`.
 
 Sink connectors use Kafka's standard consumer offset mechanism, while source connectors store offsets in a custom format within a Kafka topic.
 
@@ -27,7 +29,8 @@ Sink connectors use Kafka's standard consumer offset mechanism, while source con
 
 . Edit the `KafkaConnector` resource for the connector to include the `listOffsets` configuration.
 +
-.Example configuration to list offsets
+Example configuration to list connector offsets:
++
 [source,yaml,subs="+attributes"]
 ----
 apiVersion: {KafkaConnectorApiVersion}
@@ -38,14 +41,14 @@ metadata:
     strimzi.io/cluster: my-connect-cluster
 spec:
   listOffsets:
-    toConfigMap: # <1>
-      name: my-connector-offsets # <2>
+    toConfigMap:
+      name: my-connector-offsets
   # ...  
 ----
-<1> The reference to the config map where the list of offsets will be written to. 
-<2> The name of the config map, which is named `my-connector-offsets` in this example. 
+* `spec.listOffsets.toConfigMap` specifies where the offsets are written.
+* `spec.listOffsets.toConfigMap.name` specifies the name of the ConfigMap.
 
-. Run the command to write the list to the config map by annotating the `KafkaConnector` resource:
+. Write the list of offsets by annotating the `KafkaConnector` resource:
 +
 [source,shell]
 ----
@@ -54,32 +57,33 @@ kubectl annotate kafkaconnector my-source-connector strimzi.io/connector-offsets
 +
 The annotation remains until either the list operation succeeds or it is manually removed from the resource.
 
-. After the `KafkaConnector` resource is updated, use the following command to check if the config map with the offsets was created:
+. After the `KafkaConnector` resource is updated, use the following command to check if the `ConfigMap` with the offsets was created:
 +
 [source,shell]
 ----
 kubectl get configmap my-connector-offsets -n <namespace>
 ----
 
-. Inspect the contents of the config map to verify the offsets are being listed:
+. Inspect the contents of the `ConfigMap` to verify the offsets are being listed:
 +
 [source,shell]
 ----
 kubectl describe configmap my-connector-offsets -n <namespace>
 ----
 +
-Strimzi puts the offset information into the `offsets.json` property. 
-This does not overwrite any other properties when updating an existing config map.
+Strimzi writes the offset information to the `offsets.json` property.
+Existing properties in the `ConfigMap` are preserved.
 +
 --
-.Example source connector offset list
+Example source connector offset list:
+
 [source,yaml,subs="+attributes"]
 ----
 apiVersion: v1
 kind: ConfigMap
 metadata:
   # ...
-  ownerReferences: # <1>
+  ownerReferences:
   - apiVersion: {KafkaConnectApiVersion}
     blockOwnerDeletion: true
     controller: false
@@ -88,34 +92,39 @@ metadata:
     uid: 637e3be7-bd96-43ab-abde-c55b4c4550e0
   resourceVersion: "66951"
   uid: 641d60a9-36eb-4f29-9895-8f2c1eb9638e
-data: 
+data:
   offsets.json: |-
     {
-      "offsets" : [ {
-        "partition" : {
-          "filename" : "/data/myfile.txt" # <2>
-        },
-        "offset" : {
-          "position" : 15295 # <3>
+      "offsets": [
+        {
+          "partition": {
+            "filename": "/data/myfile.txt"
+          },
+          "offset": {
+            "position": 15295
+          }
         }
-      } ]
-    } 
+      ]
+    }
 ----
-<1> The owner reference pointing to the `KafkaConnector` resource for the source connector. 
-To provide a custom owner reference, create the config map in advance and set the owner reference. 
-<2> The source partition, represented by the filename `/data/myfile.txt` in this example for a file-based connector.
-<3> The last processed offset position in the source partition.
+
+* `metadata.ownerReferences` links the `ConfigMap` to the `KafkaConnector` resource.
+  To use a custom owner reference, create the `ConfigMap` in advance and set the owner reference explicitly.
+* `partition.filename` identifies the source partition.
+  In this example, the partition is a file path used by a file-based source connector.
+* `offset.position` shows the last processed offset for the source partition.
 --
 +
 --
-.Example sink connector offset list
+Example sink connector offset list:
+
 [source,yaml,subs="+attributes"]
 ----
 apiVersion: v1
 kind: ConfigMap
 metadata:
   # ...
-  ownerReferences: # <1>
+  ownerReferences:
   - apiVersion: {KafkaConnectApiVersion}
     blockOwnerDeletion: true
     controller: false
@@ -124,24 +133,25 @@ metadata:
     uid: 84a29d7f-77e6-43ac-bfbb-719f9b9a4b3b
   resourceVersion: "79241"
   uid: 721e30bc-23df-41a2-9b48-fb2b7d9b042c
-data: 
+data:
   offsets.json: |-
     {
       "offsets": [
         {
           "partition": {
-            "kafka_topic": "my-topic", # <2>
-            "kafka_partition": 2 # <3>
+            "kafka_topic": "my-topic",
+            "kafka_partition": 2
           },
           "offset": {
-            "kafka_offset": 4 # <4>
+            "kafka_offset": 4
           }
         }
       ]
     }
 ----
-<1> The owner reference pointing to the `KafkaConnector` resource for the sink connector. 
-<2> The Kafka topic that the sink connector is consuming from.
-<3> The partition of the Kafka topic.
-<4> The last committed Kafka offset for this topic and partition.
+
+* `metadata.ownerReferences` links the `ConfigMap` to the `KafkaConnector` resource.
+* `partition.kafka_topic` specifies the Kafka topic consumed by the sink connector.
+* `partition.kafka_partition` specifies the partition of the Kafka topic.
+* `offset.kafka_offset` shows the last committed Kafka offset for that topic partition.
 --
