--- a/documentation/modules/configuring/proc-altering-connector-offsets.adoc
+++ b/documentation/modules/configuring/proc-altering-connector-offsets.adoc
@@ -5,17 +5,19 @@
 // assembly-config.adoc
 
 [id='proc-altering-connector-offsets-{context}']
-= Altering connector offsets
+= Altering Kafka Connect connector offsets
 
 [role="_abstract"]
-To alter connector offsets using `KafkaConnector` resources, configure the resource to stop the connector and add `alterOffsets` configuration to specify the offset changes in a config map. 
-You can reuse the same config map used to xref:proc-listing-connector-offsets-{context}[list offsets].
+Altering connector offsets lets you define a new offset state that Kafka Connect applies when the connector is restarted.
 
-After the connector is stopped and the configuration is in place, annotate the `KafkaConnector` resource to apply the offset alteration, then restart the connector. 
+To alter offsets using `KafkaConnector` resources, stop the connector and reference a `ConfigMap` that defines the new offset values.
+You can reuse the same `ConfigMap` used to xref:proc-listing-connector-offsets-{context}[list connector offsets].
 
-Altering connector offsets can be useful, for example, to skip a _poison_ record or replay a record.
+After the configuration is in place, annotate the `KafkaConnector` resource to apply the offset change, then restart the connector.
 
-In this procedure, we alter the offset position for a source connector named `my-source-connector`.
+Altering offsets can be useful to skip a problematic record or to replay data from an earlier position.
+
+In this procedure, the offset position is altered for a source connector named `my-source-connector`.
 
 .Prerequisites
 
@@ -23,9 +25,10 @@ In this procedure, we alter the offset position for a source connector named `my
 
 .Procedure
 
-. Edit the `KafkaConnector` resource to stop the connector and include the `alterOffsets` configuration.
+. Edit the `KafkaConnector` resource to stop the connector and reference the `ConfigMap` that contains the new offsets.
 +
-.Example configuration to stop a connector and alter offsets
+Example configuration to stop a connector and configure offset changes:
++
 [source,yaml,subs="+attributes"]
 ----
 apiVersion: {KafkaConnectorApiVersion}
@@ -35,57 +38,63 @@ metadata:
   labels:
     strimzi.io/cluster: my-connect-cluster
 spec:
-  state: stopped # <1>
+  state: stopped
   alterOffsets:
-    fromConfigMap: # <2>
-      name: my-connector-offsets # <3>
-  # ... 
+    fromConfigMap:
+      name: my-connector-offsets
+  # ...
 ----
-<1> Changes the state of the connector to `stopped`. The default state for the connector when this property is not set is `running`.
-<2> The reference to the config map that provides the update. 
-<3> The name of the config map, which is named `my-connector-offsets` in this example. 
 
-. Edit the config map to make the alteration.
+* `spec.state: stopped` stops the connector before applying offset changes.
+* `spec.alterOffsets.fromConfigMap.name` specifies the `ConfigMap` that contains the updated offsets.
+
+. Edit the `ConfigMap` to define the new offset values.
 +
-In this example, we're resetting the offset position for a source connector to 15000.
+In this example, the offset position for a source connector is set to `15000`.
 +
-.Example source connector offset list configuration
+Example source connector offset configuration:
++
 [source,yaml,subs="+attributes"]
 ----
 apiVersion: v1
 kind: ConfigMap
 metadata:
   # ...
-data: 
-  offsets.json: |- # <1>
+data:
+  offsets.json: |-
     {
-      "offsets" : [ {
-        "partition" : {
-          "filename" : "/data/myfile.txt"
-        },
-        "offset" : {
-          "position" : 15000 # <2>
+      "offsets": [
+        {
+          "partition": {
+            "filename": "/data/myfile.txt"
+          },
+          "offset": {
+            "position": 15000
+          }
         }
-      } ]
-    } 
+      ]
+    }
 ----
-<1> Edits must be made within the `offsets.json` property. 
-<2> The updated offset position in the source partition.
 
-. Run the command to update the offset position by annotating the `KafkaConnector` resource:
+* Offset changes must be defined in the `offsets.json` property.
+* `partition.filename` identifies the source partition.
+* `offset.position` specifies the new offset to apply.
+
+. Apply the offset change by adding the annotation to the `KafkaConnector` resource:
 +
 [source,shell]
 ----
 kubectl annotate kafkaconnector my-source-connector strimzi.io/connector-offsets=alter -n <namespace>
 ----
 +
-The annotation remains until either the update operation succeeds or it is manually removed from the resource.
+The annotation remains until the offset update succeeds or is manually removed.
 
-. Check the changes by using the procedure to xref:proc-listing-connector-offsets-{context}[list connector offsets].
+. Verify the updated offsets by xref:proc-listing-connector-offsets-{context}[listing connector offsets].
 
-. Restart the connector by changing the state to `running`.
+. Restart the connector by setting its state to `running`.
 +
-.Example configuration to start a connector
+Example configuration to restart the connector:
++
 [source,yaml,subs="+attributes"]
 ----
 apiVersion: {KafkaConnectorApiVersion}
@@ -96,5 +105,5 @@ metadata:
     strimzi.io/cluster: my-connect-cluster
 spec:
   state: running
-  # ... 
+  # ...
 ----
