--- a/documentation/modules/deploying/con-switching-api-to-kafka-connector.adoc
+++ b/documentation/modules/deploying/con-switching-api-to-kafka-connector.adoc
@@ -5,7 +5,7 @@
 // assembly-deploy-kafka-connect-with-plugins.adoc
 
 [id='con-switching-api-to-kafka-connector-{context}']
-= Switching to using `KafkaConnector` custom resources
+= Switching to KafkaConnector custom resources
 
 [role="_abstract"]
 You can switch from using the Kafka Connect API to using `KafkaConnector` custom resources to manage your connectors.
