--- a/documentation/modules/deploying/proc-deploy-kafka-connect-using-image-volumes.adoc
+++ b/documentation/modules/deploying/proc-deploy-kafka-connect-using-image-volumes.adoc
@@ -5,10 +5,10 @@
 // assembly-deploy-kafka-connect-with-plugins.adoc
 
 [id='using-image-volumes-to-add-connector-plugins-{context}']
-= Using Kubernetes Image Volumes to add connector plugins
+= Mounting connector plugins using image volumes
 
 [role="_abstract"]
-Configure Kafka Connect so that connectors are automatically mounted as link:https://kubernetes.io/docs/concepts/storage/volumes/#image[Kubernetes Image Volumes^].
+Configure Kafka Connect so that connector plugins are automatically mounted as link:https://kubernetes.io/docs/concepts/storage/volumes/#image[Kubernetes Image Volumes^].
 You define the connector plugins using the `.spec.plugins` property of the `KafkaConnect` custom resource.
 Strimzi automatically mounts them into the Kafka Connect deployment.
 
